webrtc/modules/desktop_capture/win/dxgi_frame.cc
@@ -10,6 +10,8 @@
 
 #include "webrtc/modules/desktop_capture/win/dxgi_frame.h"
 
+#include <string.h>
+
 #include <utility>
 
 #include "webrtc/base/checks.h"
@@ -46,6 +48,13 @@ bool DxgiFrame::Prepare(DesktopSize size, DesktopCapturer::SourceId source_id) {
     if (!frame) {
       return false;
     }
+    // DirectX capturer won't paint each pixel in the frame due to its one
+    // capturer per monitor design. So once the new frame is created, we should
+    // clear it to avoid the legacy image to be remained on it. See
+    // http://crbug.com/708766.
+    RTC_DCHECK_EQ(frame->stride(),
+                  frame->size().width() * DesktopFrame::kBytesPerPixel);
+    memset(frame->data(), 0, frame->stride() * frame->size().height());
 
     frame_ = SharedDesktopFrame::Wrap(std::move(frame));
   }
